<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:background="@drawable/image_background">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size_75dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/size_150dp"
                android:layout_height="@dimen/size_120dp"
                android:contentDescription="@string/this_is_app_logo"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:layout_marginLeft="@dimen/size_8dp"
                android:layout_marginRight="@dimen/size_8dp"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_12dp"
                android:rotation="3"
                android:src="@drawable/ic_triangle"
                app:layout_constraintEnd_toEndOf="@+id/card_sign_in"
                app:layout_constraintHorizontal_bias="0.318"
                app:layout_constraintStart_toStartOf="@+id/card_sign_in"
                app:layout_constraintTop_toTopOf="@+id/card_sign_in" />


            <android.support.v7.widget.CardView
                android:id="@+id/card_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/size_15dp"
                app:cardElevation="@dimen/size_20dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_15dp">

                    <EditText
                        android:id="@+id/edit_text_email"
                        style="@style/EditTextDefault"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:drawableRight="@drawable/ic_mail" />

                    <EditText
                        android:id="@+id/edit_text_password"
                        style="@style/EditTextDefault"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_text_email"
                        tools:drawableRight="@drawable/ic_eye_closed" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_sign_in"
                        style="@style/ButtonRoundBlue"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="@dimen/size_45dp"
                        android:layout_marginTop="@dimen/size_15dp"
                        android:text="@string/log_in"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_sign_up"
                        style="@style/ButtonRoundPink"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="@dimen/size_45dp"
                        android:layout_marginBottom="@dimen/size_10dp"
                        android:layout_marginTop="@dimen/size_15dp"
                        android:text="@string/sign_up"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button_forgot_password"
                style="@style/TextCardHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_sign_in" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>
